infra/kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api
  namespace: root
spec:
  selector:
    matchLabels:
      app: web-api
  replicas: 1
  template:
    metadata:
      labels:
        app: web-api
    spec:
      imagePullSecrets:
      - name: us-east-1-ecr-registry
      containers:
      - name: web
        image: 207259804926.dkr.ecr.us-east-1.amazonaws.com/root/web:latest
        imagePullPolicy: "Always"
        command: ["/bin/sh"]
        args: ["-c", "cd /srv; yarn install; yarn build; /bin/envconsul -consul-addr=consul-server:8500 -prefix root/web nginx"]
        ports:
        - containerPort: 80
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 80
        #   initialDelaySeconds: 15
        #   periodSeconds: 5
        #   successThreshold: 1
        # resources:
        #   limits:
        #     cpu: 400m
        #     memory: 1024Mi
        #   requests:
        #     cpu: 20m
        #     memory: 512Mi
      - name: api
        image: 207259804926.dkr.ecr.us-east-1.amazonaws.com/root/api:latest
        imagePullPolicy: "Always"
        command: ["/bin/sh"]
        args: ["-c", "cd /srv/api; yarn install --production=false; yarn build; /bin/envconsul -consul-addr=consul-server:8500 -prefix root/api pm2-runtime start /srv/docker/api/pm2/staging.json"]
        ports:
        - containerPort: 3001
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 3001
        #   initialDelaySeconds: 15
        #   periodSeconds: 5
        #   successThreshold: 1
        resources:
          limits:
            cpu: 400m
            memory: 1024Mi
          requests:
            cpu: 20m
            memory: 512Mi
---
