infra/kubernetes/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: root-postgres
  namespace: root
spec:
  selector:
    matchLabels:
      app: root-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: root-postgres
    spec:
      containers:
        - name: root-postgres
          image: postgres:13
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: root-postgredb
      volumes:
        - name: root-postgredb
          persistentVolumeClaim:
            claimName: root-postgres-pv-claim
