infra/kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: root-postgres
  namespace: root
  labels:
    app: root-postgres
spec:
  selector:
   app: root-postgres
  type: ClusterIP
  ports:
   - protocol: TCP
     targetPort: 5432
     port: 5432
