infra/kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: root
  labels:
    app: api
spec:
  selector:
   app: api
  type: ClusterIP
  ports:
   - protocol: TCP
     targetPort: 3001
     port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: root
  labels:
    app: web
spec:
  selector:
   app: web
  type: ClusterIP
  ports:
   - protocol: TCP
     targetPort: 80
     port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: root
  labels:
    app: redis
    role: master
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
    role: master
    tier: backend
---
